--- a/style.css
+++ b/style.css
@@ -298,6 +298,13 @@ button:hover {
     background: #ddd;
     padding: 3%;
 }
+.service_div p {
+    font-size: 1rem;
+}
+
+.service_div h3 {
+    font-size: 1.2rem;
+}
 
 .service_div h3 {
     margin-bottom: 4%;
@@ -352,7 +359,7 @@ section#project {
     top: unset;
     bottom: 0px;
     left: 0px;
-    width: 329px;
+    width: 80%;
     color: white;
     background: linear-gradient(to top, black, transparent);
     padding: 40px 17px;
@@ -362,20 +369,22 @@ section#project {
 
 .project_text .text span {
     text-decoration: underline;
-    font-size: 14px;
+    font-size: 1rem;
 }
-
+.project_img img {
+    width: 100%;
+}
 .project_text .text h3 {
     margin: 5px 0px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 0.8rem;
     line-height: 30px;
     word-spacing: 1px;
 }
 
 .project_singleBox a {
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     display: block;
     font-weight: 500;
     transform: translateX(-98px);
@@ -517,6 +526,11 @@ footer {
 @media screen and (max-width:800px) {
     .container {
         display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        overflow: hidden;
+        align-items: center;
+        align-content: center;
     }
     header {
         position: unset;
@@ -575,11 +589,14 @@ footer {
         flex: 1;
     }
     .project_singleBox {
-        width: 80%;
+        width: 100%;
     }
     /* ------------------------- clint area -----------------*/
     .clint {
-        margin: auto !important;
+        margin: auto ;
+    }
+    .card-body {
+        margin: 0px 5px;
     }
     /* ------------------------- footer area ---------------------------*/
     .social_icon {
